[tool.poetry]
name = "chat-bot"
version = "0.1.0"
description = "chat bot for student project"
authors = ["Ivan Timofeev"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
